--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: CI
 
 on:
-  # Triggers the workflow on push or pull request events but only for the master branch
   push:
     branches: [ master ]
   pull_request:
@@ -10,24 +9,40 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  container:
-    runs-on: ubuntu-latest
-    container: debian:12
-    # Steps represent a sequence of tasks that will be executed as part of the job
+  ubuntu-latest:
+    runs-on: ubuntu-24.04
+    name: Ubuntu 24.04
     steps:
      - name: Checkout
-       uses: actions/checkout@v2
+       uses: actions/checkout@v4
      # Runs a set of commands using the runners shell
      - name: Start build
        run: |
           echo Beginning build
           pwd
           ls -la
+          sudo apt-get update
+          sudo apt-get install -y git wget automake pkg-config libtool m4 build-essential libncurses-dev
           cd ..
+          git clone https://github.com/InterLinked1/lbbs.git
+          cd lbbs
+          sudo scripts/libetpan.sh
+          cd ../evergreen
+          make
+          sudo make install
+  debian-stable:
+    runs-on: ubuntu-latest
+    name: Debian 12
+    container: debian:12
+    steps:
+     - name: Checkout
+       uses: actions/checkout@v4
+     - name: Start build
+       run: |
           apt-get update
           apt-get install -y git wget automake pkg-config libtool m4 build-essential libncurses-dev
+          cd ..
           git clone https://github.com/InterLinked1/lbbs.git
           cd lbbs
           scripts/libetpan.sh
